ios/chrome/browser/ui/content_suggestions/content_suggestions_view_controller.mm
@@ -248,6 +248,14 @@ BOOL ShouldCellsBeFullWidth(UITraitCollection* collection) {
   }
 }
 
+- (void)viewWillAppear:(BOOL)animated {
+  [super viewWillAppear:animated];
+  // Reload data to ensure the Most Visited tiles are correctly positionned, in
+  // particular during a rotation while a ViewController is presented in front
+  // of the NTP.
+  [self.collectionView.collectionViewLayout invalidateLayout];
+}
+
 - (void)viewDidAppear:(BOOL)animated {
   [super viewDidAppear:animated];
   // Resize the collection as it might have been rotated while not being
